# theatre-opengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Classroom  Makefile  README.md  classroom.cpp  cmake_install.cmake  theatre.cpp
src/: chair.cpp  chairarm.cpp  fan.cpp  stair.cpp
